Add alternative payment methods support (like Google Pay)